# install-intelfortran-action

./: README.md  action.yml
.github/workflows/: build-cache.yml  ci.yml
scripts/: install_windows.bat
test/: CMakeLists.txt  main.f90  test.bat  test.ps1  test.sh
